# IR_Raman_analysis_Toolkit

./: .gitignore  PORTABLE_README.txt  README.md  install_macos.command  launch_ir_raman_phase_finder.bat  launch_ir_raman_phase_finder_silent.vbs  pyproject.toml  pytest.ini  reference_template.json  run_finder.bat  run_finder.command  run_finder.sh  run_finder_cli.bat  run_ftir_example.bat  run_ftir_example.command  run_raman_example.bat  run_raman_example.command  setup_env.bat  setup_env.command  setup_env.sh  update_from_github.bat  update_macos.command
Vibrational_Finder/: app.json
Vibrational_Finder/finder_core/: __init__.py  cache.py  chemistry.py  data_sources.py  export.py  matching_base.py  models.py  spectral_metadata.py
Vibrational_Finder/vibrational_finder/: __init__.py  band_detection.py  matching.py  metadata.py  models.py  preprocessing.py  (+1 more)
docs/: ARDI_NOTES.md  DATABASE_WORKFLOW.md  DATA_SOURCES.md
examples/: calcite_ftir.xy  calcite_raman.xy  library.csv  observed_ftir.xy  observed_gelenite_raman.txt  observed_raman.xy  quartz_ftir.xy  quartz_raman.xy
installer/: IR_Raman_Phase_Finder.iss  README_build_installer.md  build_installer.bat  clean_payload.bat
scripts/: build_macos_pkg.command
tests/: test_chemistry_and_import.py  test_external_sources.py  test_matching.py  test_openspecy_source.py  test_reference_cache.py  test_rruff_source.py
toolkit/: launch_ir_raman_phase_finder_preview.command  launch_ir_raman_phase_finder_preview.ps1  launch_ir_raman_phase_finder_preview_macos.py  manifest.json  setup_sci_env.bat  setup_sci_env.command
(+33 files in other folders)
